Couple of fixes for mobile and tab spacing

--- a/AngularTesting/Content/projectPopup.scss
+++ b/AngularTesting/Content/projectPopup.scss
@@ -23,7 +23,7 @@ $popUpBackgroundColor: white;
     -o-transition: width ease-in-out 1s;
     -webkit-transition: width ease-in-out 1s;
     transition: width ease-in-out 1s;
-    margin-bottom: 3%;
+    margin-bottom: 2%;
 
     &.selected {
         z-index: 2;
